--- a/addons/website/static/src/scss/website.wysiwyg.scss
+++ b/addons/website/static/src/scss/website.wysiwyg.scss
@@ -67,6 +67,13 @@
     }
 }
 
+ul.oe-checklist > li:not(.oe-nested):before {
+    top: 4px !important;
+}
+ul.oe-checklist > li.checked:after {
+    top: 0 !important;
+}
+
 // TRANSLATIONS
 .oe_translate_examples li {
     margin: 10px;
